test/integration/page-config/pages/invalid/spread-config.js
const props = { amp: true }

const SpreadConfig = () => <p>{JSON.stringify(props)}</p>

// export const config = { ...props }

export default SpreadConfig
